--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <nav class="navbar navbar-expand-md bg-light sticky-sm-top">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">
-        <img src="/images/logo.png" alt="Logo" width="50" height="30" class="d-inline-block align-text-center">
+        <img src="images/logo.png" alt="Logo" width="50" height="30" class="d-inline-block align-text-center">
         Chengyue Wei
       </a>
       <button 
