--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
     <div class="row row-cols-1 row-cols-md-3 g-4">
       <div class="col">
         <main class="card">
-          <img src="/images/logo.png" class="card-img-top" alt="...">
+          <img src="images/logo.png" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Portfolio</h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -159,7 +159,7 @@
       </div>
       <div class="col">
         <main class="card">
-          <img src="/images/logo.png" class="card-img-top" alt="...">
+          <img src="images/logo.png" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Integrated Campus Service Portal</h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -169,7 +169,7 @@
       </div>
       <div class="col">
         <main class="card">
-          <img src="/images/logo.png" class="card-img-top" alt="...">
+          <img src="images/logo.png" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">UWCSSA Web Portal</h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -179,7 +179,7 @@
       </div>     
       <div class="col">
         <main class="card ">
-          <img src="/images/logo.png" class="card-img-top" alt="...">
+          <img src="images/logo.png" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Academic Employee Management</h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
