--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <title>Portfolio</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" 
   integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -78,13 +80,13 @@
   </div>
 
   <br><br><br><br><br>
-
+  <!-- about section -->
   <div id="about" class="about text-center">
     <h1>About Me</h1>
     <h4>Education & Skills</h4>
     <div class="about-container container text-center">
-      <main class="row">
-        <section class="education col ">
+      <div class="row">
+        <section class="education col">
           <a class="btn btn-primary" data-bs-toggle="collapse" href="#education" role="button" aria-expanded="false" aria-controls="education">
             Education
           </a>
@@ -95,15 +97,15 @@
             </section>  
           </main>
         </section>
-        <section class="skills col">
+        <section class="skills col ">
           <a class="btn btn-primary" data-bs-toggle="collapse" href="#skills" role="button" aria-expanded="false" aria-controls="skills">
             Skills
           </a>
           <main class="collapse" id="skills" >
-            <section class="card card-body d-flex flex-row justify-content-around " >
+            <section class="card card-body d-flex flex-row justify-content-around mt-3" >
               <section class="col">
                 <h5>Languages</h5>
-                <!-- make them hoverable -->
+                 <!-- make them hoverable -->
                 <ul class="list-group list-group-flush  ">
                   <li class="list-group-item">HTML</li>
                   <li class="list-group-item">CSS</li>
@@ -132,18 +134,19 @@
             Experience
           </a>
           <main class="collapse" id="experience" >
-            <section class="card card-body" >
+            <section class="card card-body mt-3" >
               <h5>University of Windsor</h5>
               <p>Majored in Compute Science with a degree of Applied Computing</p>
             </section>  
           </main>
         </section>
-      </main>
+      </div>
+      
     </div>
   </div>
 
   <br><br><br><br><br>
-  
+  <!-- project section -->
   <div id="projects"  class="projects text-center container w-75">
     <h1>Projects</h1>
     <div class="row row-cols-1 row-cols-md-3 g-4">
@@ -193,14 +196,34 @@
 
   <br><br><br><br><br>
 
-
-  <div id="contact" class="d-flex justify-content-center align-content-center ">
+  <!-- contact section -->
+  <!-- <div id="contact" class="d-flex justify-content-center align-content-center ">
     <main class="p-5 m-5 text-center">
       <h3>Contact Me</h3>
       <h4>Feel free to send me an Email</h4>
     </main>
+  </div> -->
+  <div id="contact" class="contact-section py-5">
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-lg-8">
+                <div class="contact-form text-center wow animate__animated animate__fadeInUp">
+                    <h3>Contact Me</h3>
+                    <h4 class="mb-4">Feel free to send me an email</h4>
+
+                    <!-- Replace 'your-email@example.com' with your email -->
+                    <a href="mailto:your-email@example.com" class="btn btn-primary btn-animated mt-3">
+                        <i class="fas fa-envelope"></i> Send Email
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
   </div>
 
+
+
+  <!-- footer section -->
   <div>
     <footer class="footer text-center bg-warning bg-gradient">
       <div class="container p-3">
@@ -210,5 +233,6 @@
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+  <script src="index.js"></script>
 </body>
 </html>
