--- a/index.html
+++ b/index.html
@@ -5,13 +5,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portfolio</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" 
   integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-  <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-  />
   <link rel="stylesheet" href="style.css">
 </head>
 <body data-bs-spy="scroll" data-bs-target=".navbar" data-bs-offset="50">
@@ -184,10 +181,10 @@
 
   <br><br><br><br><br>
   <!-- project section -->
-  <div id="projects"  class="projects text-center container w-75">
+  <div id="projects" class="projects text-center container w-75 overflow-hidden">
     <h1 class="animate__animated animate__backInRight">Projects</h1>
     <div class="row row-cols-1 row-cols-md-3 g-4">
-      <div class="col">
+      <div class="col col-md-6 col-lg-4">
         <main class="card animate__animated animate__backInRight">
           <img src="images/logo.png" class="card-img-top" alt="...">
           <div class="card-body">
@@ -197,7 +194,7 @@
           </div>
         </main>
       </div>
-      <div class="col">
+      <div class="col col-md-6 col-lg-4">
         <main class="card animate__animated animate__backInRight">
           <img src="images/logo.png" class="card-img-top" alt="...">
           <div class="card-body">
@@ -207,7 +204,7 @@
           </div>
         </main>
       </div>
-      <div class="col">
+      <div class="col col-md-6 col-lg-4">
         <main class="card animate__animated animate__backInRight">
           <img src="images/logo.png" class="card-img-top" alt="...">
           <div class="card-body">
@@ -217,13 +214,23 @@
           </div>
         </main> 
       </div>     
-      <div class="col">
+      <div class="col col-md-6 col-lg-4">
         <main class="card animate__animated animate__backInRight">
           <img src="images/logo.png" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title brand-name">Academic Employee Management</h5>
             <p class="card-text">A system designed to simplify the management of academic employees. The system supports functions such as tracking employee data, generating reports, and managing employee information.</p>
             <a href="https://github.com/KevinVVei/Employee-Management" target="_blank" class="btn btn-primary">On GitHub</a>
+          </div>
+        </main>
+      </div>
+      <div class="col col-md-6 col-lg-4">
+        <main class="card animate__animated animate__backInRight">
+          <img src="images/logo.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title brand-name">Faced Interview Question</h5>
+            <p class="card-text">A website contains all interview questions encountered before.</p>
+            <a href="https://github.com/KevinVVei/Employee-Management" target="_blank" class="btn btn-primary" >On GitHub</a>
           </div>
         </main>
       </div>
