minor ux problem

--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
           <div class="card-body">
             <h5 class="card-title brand-name">Faced Interview Question</h5>
             <p class="card-text">A website contains all interview questions encountered before.</p>
-            <a href="https://github.com/KevinVVei/Employee-Management" target="_blank" class="btn btn-primary" >On GitHub</a>
+            <a href="#" target="_blank" class="btn btn-primary" style="pointer-events: none; cursor: default;" >On GitHub</a>
           </div>
         </main>
       </div>
