re-write a project

--- a/index.html
+++ b/index.html
@@ -228,8 +228,8 @@
         <main class="card animate__animated animate__backInRight">
           <img src="images/logo.png" class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title brand-name">Faced Interview Question</h5>
-            <p class="card-text">A website contains all interview questions encountered before.</p>
+            <h5 class="card-title brand-name">Component Library</h5>
+            <p class="card-text">A library contains all different kinds of components that are often used.</p>
             <a href="#" target="_blank" class="btn btn-primary" style="pointer-events: none; cursor: default;" >On GitHub</a>
           </div>
         </main>
