image not loading

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
           </span>
         </section>
         <section class="col-md-6 d-flex justify-content-center">
-          <img class="img-fluid rounded-circle w-50" src="/images/child.JPG" alt="Hu" />
+          <img class="img-fluid rounded-circle w-50" src="images/child.JPG" alt="Hu" />
         </section>
       </div>
     </main>
