--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
     </div>
   </nav>
 
+  <!-- home section -->
   <div id="home" class="d-flex justify-content-center align-items-center vh-100">
     <main class="container">
       <div class="row">
@@ -129,7 +130,7 @@
             <div class="card-body">
               <h5 class="card-title brand-name">Component Library</h5>
               <p class="card-text">A library contains all different kinds of components that are often used.</p>
-              <a href="#" target="_blank" class="btn btn-primary" style="pointer-events: none; cursor: default;" >On GitHub</a>
+              <a href="#" target="_blank" class="btn btn-secondary opacity-25" style="pointer-events: none; cursor: default;" >Needs work</a>
             </div>
           </main>
         </div>
@@ -137,6 +138,7 @@
     </div>
   </div>
 
+  <!-- skills section -->
   <div id="skills" class="my-5">
     <h1 class="text-center">Skills</h1>
     <div class="container">
@@ -180,15 +182,19 @@
             <div class="col-lg-8">
                 <div class="contact-form text-center wow animate__animated animate__fadeInUp">
                     <h3>Contact Me</h3>
-                    <!-- <h4 class="mb-4">Feel free to send me an email</h4> -->
-                    <a href="mailto:weiyuezhong2012@gmail.com" class="btn btn-primary btn-animated mt-3">
-                        <i class="fas fa-envelope"></i> Send Email
+                    <a href="mailto:weiyuezhong2012@gmail.com" class="btn btn-primary btn-animated mt-3 custom-btn">
+                        <i class="fas fa-envelope custom-icon"></i> Send Email
                     </a>
                 </div>
             </div>
         </div>
     </div>
   </div>
+
+  <label class="switch">
+    <input type="checkbox">
+    <span class="slider"></span>
+  </label>
 
   <!-- footer section -->
   <div>
