--- a/index.html
+++ b/index.html
@@ -134,6 +134,16 @@
             </div>
           </main>
         </div>
+        <div class="col  d-flex justify-content-center">
+          <main class="card" style="max-width: 18rem;">
+            <img src="images/logo.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title brand-name">Selfuse Spend Tracker</h5>
+              <p class="card-text">A web application developed independently aim to track the daily spend of myself to better assist the finance situation of me.</p>
+              <a href="https://github.com/KevinVVei/track-spend" target="_blank" class="btn btn-primary">On GitHub</a>
+            </div>
+          </main>
+        </div>
       </div>
     </div>
   </div>
