changing link to demo

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
             <div class="card-body">
               <h5 class="card-title brand-name">Selfuse Spend Tracker</h5>
               <p class="card-text">A web application developed independently aim to track the daily spend of myself to better assist the finance situation of me.</p>
-              <a href="https://github.com/KevinVVei/track-spend" target="_blank" class="btn btn-primary">On GitHub</a>
+              <a href="https://master--fastidious-bienenstitch-6ac5af.netlify.app/" target="_blank" class="btn btn-primary">Demo</a>
             </div>
           </main>
         </div>
