--- a/index.html
+++ b/index.html
@@ -66,6 +66,9 @@
               <a class="nav-link" href="#projects">Projects</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="#skills">Skills</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="#contact">Contact</a>
             </li>
           </ul>
@@ -91,7 +94,7 @@
                 href="https://www.google.ca/maps/place/Windsor,+ON/@42.2950985,-83.0852822,12z/data=!3m1!4b1!4m6!3m5!1s0x883b2ac1b54f886b:0xb66cd49527fcdc51!8m2!3d42.3149367!4d-83.0363633!16zL20vMDg0M20?entry=ttu"
                 target="_blank"
               >
-              <i class="fa-solid fa-location-dot"></i>
+                <i class="fa-solid fa-location-dot"></i>
               </a>
             </p>
             <span>
@@ -298,10 +301,12 @@
         <div class="row justify-content-center">
           <div class="col-lg-8">
             <div
-              class="contact-form text-center wow animate__animated animate__fadeInUp"
+              id="contactForm"
+              class="contact-form text-center wow animate__animated"
             >
               <h3>Contact Me</h3>
               <a
+                id="emailBtn"
                 href="mailto:weiyuezhong2012@gmail.com"
                 class="btn btn-primary btn-animated mt-3 custom-btn"
               >
