--- a/index.html
+++ b/index.html
@@ -103,10 +103,11 @@
               </a>
               <a
                 href="https://www.linkedin.com/in/chengyue-wei-81013a1b7/"
-                target="_blank"
+                target="_blank"                
               >
-                <i class="fa-brands fa-linkedin fa-2xl"></i>
+                <i class="fa-brands fa-linkedin fa-2xl px-4"></i>
               </a>
+              <!-- <p style="opacity: 0.3; cursor: default; user-select: none;">Google Font Awesome link is down temporarily.</p> -->
             </span>
           </section>
           <section class="col-md-6 d-flex justify-content-center">
@@ -260,23 +261,25 @@
       <div class="container">
         <div class="row row-cols-1 row-cols-md-3 g-4 mt-4">
           <div class="col">
-            <h3 class="text-center">Frontend</h3>
+            <h3 class="text-center">Languages</h3>
             <ul class="list-unstyled text-center">
-              <li>HTML</li>
-              <li>CSS</li>
-              <li>JavaScript</li>
-              <li>React.js</li>
-              <li>Vue.js</li>
-            </ul>
-          </div>
-          <div class="col">
-            <h3 class="text-center">Backend</h3>
-            <ul class="list-unstyled text-center">
-              <li>Node.js</li>
-              <li>Express.js</li>
+              <li>HTML5</li>
+              <li>CSS3</li>
               <li>Python</li>
               <li>Java</li>
               <li>C</li>
+              <li>JavaScript</li>
+              <li>C#</li>
+            </ul>
+          </div>
+          <div class="col">
+            <h3 class="text-center">Frameworks</h3>
+            <ul class="list-unstyled text-center">
+              <li>Node.js</li>
+              <li>React.js</li>
+              <li>Vue.js</li>
+              <li>Express.js</li>
+              <li>MongoDB</li>
             </ul>
           </div>
           <div class="col">
@@ -286,6 +289,7 @@
               <li>GitHub</li>
               <li>VS Code</li>
               <li>Chrome Debug</li>
+              <li>Unity</li>
             </ul>
           </div>
         </div>
@@ -333,9 +337,6 @@
       crossorigin="anonymous"
     ></script>
     <script src="index.js"></script>
-    <script
-      src="https://kit.fontawesome.com/1316ecbaf4.js"
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://kit.fontawesome.com/1316ecbaf4.js" crossorigin="anonymous"></script>
   </body>
 </html>
