update project address

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   </head>
   <body data-bs-spy="scroll" data-bs-target=".navbar" data-bs-offset="50">
     <!-- Navigation Bar -->
-    <nav class="navbar navbar-expand-md bg-light sticky-sm-top">
+    <nav class="navbar navbar-expand-md bg-light sticky-sm-top border-bottom">
       <div class="container-fluid">
         <a class="navbar-brand" href="#home">
           <img
@@ -236,17 +236,18 @@
             <main class="card" style="max-width: 18rem">
               <img src="images/logo.png" class="card-img-top" alt="..." />
               <div class="card-body">
-                <h5 class="card-title brand-name">Selfuse Spend Tracker</h5>
+                <h5 class="card-title brand-name">
+                  MoneyTracker</h5>
                 <p class="card-text">
                   A web application developed independently aim to track the
                   daily spend of myself to better assist the finance situation
                   of me.
                 </p>
                 <a
-                  href="https://master--fastidious-bienenstitch-6ac5af.netlify.app/"
+                  href="https://github.com/KevinVVei/MoneyTracker"
                   target="_blank"
                   class="btn btn-primary"
-                  >Demo</a
+                  >GitHub</a
                 >
               </div>
             </main>
