--- a/index.html
+++ b/index.html
@@ -239,14 +239,12 @@
       <span class="text-4xl mb-8 mx-auto text-blue-500">Skills</span>
       <main class="flex flex-col w-full h-full justify-evenly items-center">
         <span class="text-2xl text-blue-500">Languages:</span>
-        <section class="flex flex-row w-full justify-center text-center gap-8 flex-wrap">
-          <div class="flex justify-around items-center w-full">             
+        <section class="flex flex-row w-full justify-center text-center h-1/3 flex-wrap p-6 mt-6">
+          <div class="flex justify-center flex-wrap gap-8 items-center w-full">             
             <i class="devicon-html5-plain colored devIcons"></i>          
             <i class="devicon-css3-plain colored devIcons"></i>
             <i class="devicon-javascript-plain colored devIcons"></i>
             <i class="devicon-java-plain colored devIcons"></i>
-          </div>
-          <div class="flex flex-row justify-around items-center w-full">
             <i class="devicon-python-plain colored devIcons"></i>
             <i class="devicon-c-plain colored devIcons"></i>
             <i class="devicon-php-plain colored devIcons"></i>
@@ -254,28 +252,24 @@
           </div>
         </section>
         <span class="text-2xl text-blue-500">Frameworks</span> 
-        <section class="flex flex-row w-full justify-center text-center h-1/3 flex-wrap gap-8">
-          <div class="flex justify-around items-center w-full">
+        <section class="flex flex-row w-full justify-center text-center h-1/3 flex-wrap p-6">
+          <div class="flex justify-center flex-wrap gap-8 items-center w-full">
             <i class="devicon-react-original colored devIcons"></i>
             <i class="devicon-vuejs-plain colored devIcons"></i>
             <i class="devicon-nodejs-plain colored devIcons"></i>
             <i class="devicon-express-original colored devIcons"></i>
-          </div>
-          <div class="flex justify-around items-center w-full">
             <i class="devicon-bootstrap-plain colored devIcons"></i>
             <i class="devicon-materialui-plain colored devIcons"></i>
             <i class="devicon-tailwindcss-plain colored devIcons"></i>
           </div>
         </section>
         <span class="text-2xl text-blue-500">Developer Tools</span>
-        <section class="flex flex-row w-full justify-center text-center h-1/3 flex-wrap gap-8">
-          <div class="flex justify-around items-center w-full">           
+        <section class="flex flex-row w-full justify-center text-center h-1/3 flex-wrap p-6">
+          <div class="flex justify-center flex-wrap gap-8 items-center w-full">           
             <i class="devicon-git-plain colored devIcons"></i>
             <i class="devicon-github-original colored devIcons"></i>
             <i class="devicon-unity-original colored devIcons"></i>
             <i class="devicon-vscode-plain colored devIcons"></i>
-          </div>  
-          <div class="flex justify-around items-center w-full">
             <i class="devicon-linux-plain colored devIcons"></i>
             <i class="devicon-chrome-plain-wordmark colored devIcons"></i>
           </div>
