--- a/index.html
+++ b/index.html
@@ -277,8 +277,12 @@
       </main>
     </div>
 
-    <div id="contact" class="contact flex jusify-center items-center h-96 mt-96 mb-48">
-      <button class="bg-zinc-400 rounded px-8 py-2">Contact</button>
+    <div id="contact" class="contact flex jusify-center items-center h-60 my-60">
+      <a href="mailto:weiyuezhong2012@gmail.com">
+        <button id="contact" class="bg-zinc-400 rounded px-8 py-2 text-center">
+          Contact
+        </button>
+      </a>
     </div>
 
   </body>
