--- a/index.html
+++ b/index.html
@@ -149,8 +149,9 @@
           </div>
           <div class="px-6 pt-4 pb-2">
             <a
-              href="#"
+              href="https://github.com/KevinVVei/comp499b-smart_campus"
               class="bg-black text-white px-3 py-2 rounded hover:bg-gray-800 transition duration-300"
+              target="_blank"
               >View Project</a
             >
           </div>
@@ -175,9 +176,34 @@
           </div>
           <div class="px-6 pt-4 pb-2">
             <a
-              href="#"
+              href="https://uwcssa.ca/"
               class="bg-black text-white px-3 py-2 rounded hover:bg-gray-800 transition duration-300"
-              >View Project</a
+              target="_blank"
+              >View Demo</a
+            >
+          </div>
+        </div>
+
+        <div
+          class="project-card max-w-sm rounded overflow-hidden shadow-lg m-3 transform transition duration-500 hover:scale-105"
+        >
+          <img
+            class="w-full h-64 object-cover"
+            src="images/timclone.PNG"
+            alt="Project 3"
+          />
+          <div class="px-6 py-4">
+            <h3 class="font-bold text-xl mb-2">Tim Hortons's Clone</h3>
+            <p class="text-gray-700 text-base">
+              A clone web page that based off of Tim Hortons's official website.
+            </p>
+          </div>
+          <div class="px-6 pt-4 pb-2">
+            <a
+              href="https://tim-clone.vercel.app/"
+              class="bg-black text-white px-3 py-2 rounded hover:bg-gray-800 transition duration-300"
+              target="_blank"
+              >View Demo</a
             >
           </div>
         </div>
@@ -236,10 +262,10 @@
     </div>
 
     <div id="skills" class="skills flex flex-col justify-center items-center w-full px-4">
-      <span class="text-4xl mb-8 mx-auto text-blue-500">Skills</span>
+      <span class="text-4xl mb-8 mx-auto" style="color: #687ba1">Skills</span>
       <main class="flex flex-col w-full h-full justify-evenly items-center">
-        <span class="text-2xl text-blue-500">Languages:</span>
-        <section class="flex flex-row w-full justify-center text-center h-1/3 flex-wrap p-6 mt-6">
+        <span class="text-2xl" style="color: #687ba1">Languages:</span>
+        <section class="flex flex-row w-full justify-center text-center h-1/3 flex-wrap p-6">
           <div class="flex justify-center flex-wrap gap-8 items-center w-full">             
             <i class="devicon-html5-plain colored devIcons"></i>          
             <i class="devicon-css3-plain colored devIcons"></i>
@@ -251,7 +277,7 @@
             <i class="devicon-mysql-plain-wordmark colored devIcons"></i>
           </div>
         </section>
-        <span class="text-2xl text-blue-500">Frameworks</span> 
+        <span class="text-2xl mt-8" style="color: #687ba1">Frameworks</span> 
         <section class="flex flex-row w-full justify-center text-center h-1/3 flex-wrap p-6">
           <div class="flex justify-center flex-wrap gap-8 items-center w-full">
             <i class="devicon-react-original colored devIcons"></i>
@@ -263,7 +289,7 @@
             <i class="devicon-tailwindcss-plain colored devIcons"></i>
           </div>
         </section>
-        <span class="text-2xl text-blue-500">Developer Tools</span>
+        <span class="text-2xl mt-8" style="color: #687ba1">Developer Tools</span>
         <section class="flex flex-row w-full justify-center text-center h-1/3 flex-wrap p-6">
           <div class="flex justify-center flex-wrap gap-8 items-center w-full">           
             <i class="devicon-git-plain colored devIcons"></i>
