--- a/index.html
+++ b/index.html
@@ -267,37 +267,37 @@
         <span class="text-2xl" style="color: #687ba1">Languages:</span>
         <section class="flex flex-row w-full justify-center text-center h-1/3 flex-wrap p-6">
           <div class="flex justify-center flex-wrap gap-8 items-center w-full">             
-            <i class="devicon-html5-plain colored devIcons"></i>          
-            <i class="devicon-css3-plain colored devIcons"></i>
-            <i class="devicon-javascript-plain colored devIcons"></i>
-            <i class="devicon-java-plain colored devIcons"></i>
-            <i class="devicon-python-plain colored devIcons"></i>
-            <i class="devicon-c-plain colored devIcons"></i>
-            <i class="devicon-php-plain colored devIcons"></i>
-            <i class="devicon-mysql-plain-wordmark colored devIcons"></i>
+            <i class="devicon-html5-plain colored devIcons transform transition duration-500 hover:scale-125"></i>          
+            <i class="devicon-css3-plain colored devIcons transform transition duration-500 hover:scale-125"></i>
+            <i class="devicon-javascript-plain colored devIcons transform transition duration-500 hover:scale-125"></i>
+            <i class="devicon-java-plain colored devIcons transform transition duration-500 hover:scale-125"></i>
+            <i class="devicon-python-plain colored devIcons transform transition duration-500 hover:scale-125"></i>
+            <i class="devicon-c-plain colored devIcons transform transition duration-500 hover:scale-125"></i>
+            <i class="devicon-php-plain colored devIcons transform transition duration-500 hover:scale-125"></i>
+            <i class="devicon-mysql-plain-wordmark colored devIcons transform transition duration-500 hover:scale-125"></i>
           </div>
         </section>
         <span class="text-2xl mt-8" style="color: #687ba1">Frameworks</span> 
         <section class="flex flex-row w-full justify-center text-center h-1/3 flex-wrap p-6">
           <div class="flex justify-center flex-wrap gap-8 items-center w-full">
-            <i class="devicon-react-original colored devIcons"></i>
-            <i class="devicon-vuejs-plain colored devIcons"></i>
-            <i class="devicon-nodejs-plain colored devIcons"></i>
-            <i class="devicon-express-original colored devIcons"></i>
-            <i class="devicon-bootstrap-plain colored devIcons"></i>
-            <i class="devicon-materialui-plain colored devIcons"></i>
-            <i class="devicon-tailwindcss-plain colored devIcons"></i>
+            <i class="devicon-react-original colored devIcons transform transition duration-500 hover:scale-125"></i>
+            <i class="devicon-vuejs-plain colored devIcons transform transition duration-500 hover:scale-125"></i>
+            <i class="devicon-nodejs-plain colored devIcons transform transition duration-500 hover:scale-125"></i>
+            <i class="devicon-express-original colored devIcons transform transition duration-500 hover:scale-125"></i>
+            <i class="devicon-bootstrap-plain colored devIcons transform transition duration-500 hover:scale-125"></i>
+            <i class="devicon-materialui-plain colored devIcons transform transition duration-500 hover:scale-125"></i>
+            <i class="devicon-tailwindcss-plain colored devIcons transform transition duration-500 hover:scale-125"></i>
           </div>
         </section>
         <span class="text-2xl mt-8" style="color: #687ba1">Developer Tools</span>
         <section class="flex flex-row w-full justify-center text-center h-1/3 flex-wrap p-6">
           <div class="flex justify-center flex-wrap gap-8 items-center w-full">           
-            <i class="devicon-git-plain colored devIcons"></i>
-            <i class="devicon-github-original colored devIcons"></i>
-            <i class="devicon-unity-original colored devIcons"></i>
-            <i class="devicon-vscode-plain colored devIcons"></i>
-            <i class="devicon-linux-plain colored devIcons"></i>
-            <i class="devicon-chrome-plain-wordmark colored devIcons"></i>
+            <i class="devicon-git-plain colored devIcons transform transition duration-500 hover:scale-125"></i>
+            <i class="devicon-github-original colored devIcons transform transition duration-500 hover:scale-125"></i>
+            <i class="devicon-unity-original colored devIcons transform transition duration-500 hover:scale-125"></i>
+            <i class="devicon-vscode-plain colored devIcons transform transition duration-500 hover:scale-125"></i>
+            <i class="devicon-linux-plain colored devIcons transform transition duration-500 hover:scale-125"></i>
+            <i class="devicon-chrome-plain-wordmark colored devIcons transform transition duration-500 hover:scale-125"></i>
           </div>
         </section>
       </main>
