added new project

--- a/index.html
+++ b/index.html
@@ -238,9 +238,8 @@
               href="https://meme-generator-three-alpha.vercel.app/"
               target="_blank"
               class="bg-black text-white px-3 py-2 rounded hover:bg-gray-800 transition duration-300"
-              style="pointer-events: none; cursor: default"
             >
-              Needs work
+              Demo
             </a>
           </div>
         </div>
